--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "echo 'No build step required for Vercel'",
-    "dev": "vercel dev",
-    "start": "vercel dev",
+    "dev": "node server.js",
+    "start": "node server.js",
+    "test-local": "node test-local.js",
+    "vercel-dev": "vercel dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,7 +21,12 @@
   ],
   "author": "File Transfer Team",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "archiver": "^5.3.1"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
