--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "author": "File Transfer Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "archiver": "^5.3.2",
     "cors": "^2.8.5",
-    "archiver": "^5.3.1"
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
