Simplify vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -6,26 +6,14 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/file",
-      "dest": "/api/file.js"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
-      "src": "/api/upload",
-      "dest": "/api/upload.js"
-    },
-    {
-      "src": "/api/test",
-      "dest": "/api/test.js"
-    },
-    {
-      "src": "/download/(.*)",
-      "dest": "/api/download.js?code=$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/download/(.*)",
+      "destination": "/api/download?code=$1"
     }
   ]
 }
